# lint-to-annotate

./: CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
examples/: eslint.json
src/: lint_to_annotate.cpp
src/options/: CMakeLists.txt  options.cpp  options.hpp
